Fixed the height of the container with logs not being 100% on mobile after moving everything into a parent div

--- a/src/components/pages/Activity/Activity.module.css
+++ b/src/components/pages/Activity/Activity.module.css
@@ -27,7 +27,7 @@
       grid-row: 2 / 3;
     }
     .activity-logs-container{
-      height: 100%;
+      height: 100% !important;
       width: 100%;
       overflow: hidden;
       grid-column: 1 / 2;
